--- a/src/all.module.css
+++ b/src/all.module.css
@@ -540,7 +540,7 @@ input::-webkit-scrollbar {
     left: 3px;
     width: 94px;
     height: 94px;
-    background: #ffffff;
+    background: #403b63;
 }
 
 .ldio_f2vadqclpalj>div>div:nth-child(2) {
@@ -548,7 +548,7 @@ input::-webkit-scrollbar {
     left: 20.860000000000003px;
     width: 58.279999999999994px;
     height: 58.279999999999994px;
-    background: #7474f7;
+    background: #29263e;
     animation: ldio_f2vadqclpalj 1.4925373134328357s linear infinite;
     transform-origin: 29.139999999999997px 40.419999999999995px;
 }
@@ -2303,6 +2303,7 @@ input::-webkit-scrollbar {
     width: 250px;
     margin: 5px auto;
     line-height: 1.3;
+    margin-bottom: 30px;
 }
 
 .CreateBTN {
@@ -4355,7 +4356,7 @@ input[type=range]::-ms-thumb {
 
 /* Items Components*/
 .CollectionSingle {
-    width: 170px;
+    width: 332px;
     display: inline-block;
     border-radius: 20px;
     overflow: hidden;
@@ -4365,7 +4366,7 @@ input[type=range]::-ms-thumb {
 .CollectionSingle>figure {
     display: block;
     width: 100%;
-    height: 170px;
+    height: 270px;
     overflow: hidden;
     position: relative;
 }
@@ -4373,7 +4374,6 @@ input[type=range]::-ms-thumb {
 .CollectionSingle figure img {
     display: block;
     width: 100%;
-    height: 100%;
     position: absolute;
     left: 0;
     top: 0;
@@ -4389,15 +4389,16 @@ input[type=range]::-ms-thumb {
 
 .CollectionSingle .CollectionTitle h6 {
     font-size: 14px;
+    font-weight: 200;
 }
 
 .CollectionSingle .CollectionFolder {
     width: 100%;
-    height: 59px;
+    height: 64px;
     overflow-x: scroll;
     overflow-y: hidden;
     scroll-behavior: smooth;
-    padding: 10px 1%;
+    padding: 10px 10%;
     text-align: left;
     display: grid;
     grid-gap: 5px;
@@ -4537,7 +4538,7 @@ input[type=range]::-ms-thumb {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
     border-radius: 9999px;
-    color:#64748b;
+    color:#565279;
     font-weight: 600;
     cursor: pointer;
 }
@@ -4589,6 +4590,11 @@ input[type=range]::-ms-thumb {
     padding-right: 26px!important;
     position: relative;
     top: -5px;
+    padding-top: 0.65rem;
+    padding-bottom: 0.65rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    border-radius: 9999px;
 }
 
 .dark .ItemsExploreMainCategoriesCreateElement{
@@ -4614,6 +4620,10 @@ input[type=range]::-ms-thumb {
 .dark .SectionSubMenuItems li.SectionSubMenuItemsActive a{
     font-weight: 600;
     color: #bebcd0;
+    background: #3b3854;
+    padding: 5px 12px;
+    border-radius: 20px;
+    border: 1px solid #3b3854;
  }
 
 
@@ -10757,11 +10767,15 @@ input[type=range]::-ms-thumb {
 
 .dark .CreationPageLabelF input {
     background-color: #29263e;
-    border: 2px solid #4b4670;
+    border: 2px solid transparent;
 }
 
 .sepia .CreationPageLabelF input {
     background-color: #eee8d59c;
+}
+
+.SectionMinWidth{
+    min-width: 1200px;
 }
 
 .matrix .CreationPageLabelF input {
@@ -10822,8 +10836,8 @@ input {
 }
 
 .dark .CreateBoxDesc {
-    background-color: #525252;
-    border-color: #010101;
+    background-color: #403b63;
+    border-color: #403b63;
 }
 
 .sepia .CreateBoxDesc {
@@ -12997,10 +13011,7 @@ input {
 }
 
 .dark .CollectionSingle {
-    background-color: #000000;
-    box-shadow: 1px 1px 2px 1px rgb(0 0 0 / 32%);
-    -webkit-box-shadow: 1px 1px 2px 1px rgb(0 0 0 / 32%);
-    -moz-box-shadow: 1px 1px 2px 1px rgb(0 0 0 / 32%);
+    background-color: #3b3854;
 }
 
 .sepia .CollectionSingle {
@@ -13067,7 +13078,7 @@ input {
 }
 
 .dark .CollectionSingle .CollectionTitle {
-    background-color: #000000;
+    background-color: #29263e;
     opacity: 0.7;
 }
 
@@ -13080,7 +13091,7 @@ input {
 }
 
 .dark .CollectionSingle .CollectionFolder {
-    background-color: #1b1b1b;
+    background-color: #3b3854;
 }
 
 .sepia .CollectionSingle .CollectionFolder {
@@ -13106,7 +13117,7 @@ input {
 }
 
 .dark .ItemsExploreMainCategories li.ItemsExploreMainCategoriesActive {
-    background-color: #f09243;
+    background-color: #3b3854;
 }
 
 .ItemNumbersLabel{
