--- a/src/components/Global/Card/card.component.css
+++ b/src/components/Global/Card/card.component.css
@@ -6,3 +6,14 @@ svg.profileArea {
   min-width: 900px;
   margin-top: 80px;
 }
+
+
+@media only screen and (max-width: 767px) {
+
+    svg.profileArea{
+        width: 100%!important;
+        min-width: 100%!important;
+        max-width: 100%!important;
+    }
+    
+}
