--- a/src/interfaces-ui/design-system/Container/container.module.scss
+++ b/src/interfaces-ui/design-system/Container/container.module.scss
@@ -2,7 +2,7 @@
   max-width: 100%;
   margin: 0 auto;
 
-  display: inline-block;
+  display: block;
   flex-direction: column;
   align-items: center;
 }
